--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <table cellspacing="10">
     <tr>
       <td>
-        <img src="jyoti.png" alt="Jyoti's profile photo">
+        <img src="Jyoti.png" alt="Jyoti's profile photo">
       </td>
       <td>
         <h1> Jyoti saini</h1>
